--- a/src/main/resources/assets/peepopractice/lang/nl_nl.json
+++ b/src/main/resources/assets/peepopractice/lang/nl_nl.json
@@ -7,8 +7,8 @@
     "peepopractice.perspective.first": "Voor",
     "peepopractice.perspective.back": "Achter",
     "peepopractice.perspective.front": "Voor",
-    "peepopractice.title.category_preferences": "Configureer (%s)",
-    "peepopractice.title.category_selection": "Selecteer Oefen Catogorie",
+    "peepopractice.title.category_preferences": "Configureren (%s)",
+    "peepopractice.title.category_selection": "Selecteer Categorie",
     "peepopractice.title.copy_inventory_selection": "Kopieer Inventaris",
     "peepopractice.title.edit_inventory": "Bewerk Inventaris (%s)",
     "peepopractice.title.global_config": "Globale Configuratie",
@@ -18,15 +18,15 @@
     "peepopractice.text.enabled": "Aan",
     "peepopractice.text.disabled": "Uit",
     "peepopractice.text.random": "Willekeurig",
-    "peepopractice.text.hold_to_merge": "Houd Shift om te Mengen",
-    "peepopractice.text.enchant_info": "Klik op een betoverbaar voorwerp terwijl je did boek vast houd om het te betoveren",
-    "peepopractice.text.shulker_info": "Houd control en klik op dit voorwerp om de inhoud te bewerken",
+    "peepopractice.text.hold_to_merge": "Houd Shift om samen te voegen",
+    "peepopractice.text.enchant_info": "Klik op een enchantable voorwerp terwijl je dit boek vast houdt om het te enchanten.",
+    "peepopractice.text.shulker_info": "Houd control en klik op dit voorwerp om de inhoud te bewerken.",
     "peepopractice.text.disabled.preferences": "Deze categorie heeft geen voorkeuren om te bewerken.",
     "peepopractice.text.disabled.split": "Deze categorie heeft geen split opties om te bewerken.",
     "peepopractice.text.pie_dir": "PieChart Directory",
-    "peepopractice.text.pace": "Tempo",
-    "peepopractice.text.no_pb_or_avg": "(Nee %s)",
-    "peepopractice.locate_error": "Dit gebouw kan niet worden gevonden omdat het word beinvloed door de huidige oefen categorie",
+    "peepopractice.text.pace": "Pace",
+    "peepopractice.text.no_pb_or_avg": "(Geen %s)",
+    "peepopractice.locate_error": "Deze structure kan niet worden gevonden omdat het wordt beinvloed door de huidige categorie.",
     "peepopractice.no_configured_inv": "Je hebt het inventaris nog niet bewerkt!",
     "peepopractice.no_configured_invs": "Je hebt geen bewerkte inventarissen!",
     "peepopractice.button.global_config": "Globale Configuratie",
@@ -47,54 +47,54 @@
     "peepopractice.selection_type.any": "Any%",
     "peepopractice.selection_type.aa": "AA",
     "peepopractice.global_options.same_inventory.info": "Als deze optie is aangezet, wanneer je 'Volgende Split' klikt zal je de volgende split spelen met dezelfde inventaris.",
-    "peepopractice.global_options.change_window_title.info": "Als deze optie is aangezet, de tekst '(Oefenen)' zal worden toegevoegd aan het begin scherm.",
-    "peepopractice.global_options.give_saturation.info": "Als deze optie is aangezet, you'll get 10 saturation when you spawn in.",
+    "peepopractice.global_options.change_window_title.info": "Als deze optie is aangezet, zal de tekst '(Oefenen)' worden toegevoegd aan het begin scherm.",
+    "peepopractice.global_options.give_saturation.info": "Als deze optie is aangezet, krijg je 10 saturation als je inspawnt.",
     "peepopractice.preferences.compare_type": "Split Vergelijking",
     "peepopractice.preferences.compare_type.info": "Welk type tijd de split mee word vergeleken.",
-    "peepopractice.preferences.pace_timer_show_type": "Laat Tempo Timer Zien",
-    "peepopractice.preferences.pace_timer_show_type.info": "Wanneer de Tempo Timer zal laten zien.",
+    "peepopractice.preferences.pace_timer_show_type": "Pace Timer Zichtbaarheid",
+    "peepopractice.preferences.pace_timer_show_type.info": "Wanneer je de pace timer kan zien.",
     "peepopractice.preferences.fix_ghost_buckets": "Fix Ghost Buckets",
     "peepopractice.preferences.fix_ghost_buckets.info": "Als deze optie is aangezet, zal je geen ghost buckets krijgen!",
     "peepopractice.preferences.stronghold_distance": "Stronghold Afstand",
     "peepopractice.preferences.stronghold_distance.info": "Dichtbij (200-500), Gemiddeld (700-1000), Ver (1200-1600) of Willekeurig (0-2300).",
     "peepopractice.preferences.eye_breaks": "Ender Eye breek",
-    "peepopractice.preferences.eye_breaks.info": "Of je wil dat de Eye of Enders breken ja of nee.",
-    "peepopractice.preferences.disable_mineshafts": "Zet Mineshafts Uit",
-    "peepopractice.preferences.disable_mineshafts.info": "Als deze optie is aangezet, Mineshafts zullen niet genereren.",
-    "peepopractice.preferences.disable_dungeons": "Zet Dungeons Uit",
-    "peepopractice.preferences.disable_dungeons.info": "Als deze optie is aangezet, Spawners zullen niet genereren.",
-    "peepopractice.preferences.eye_count": "Eye Telling",
-    "peepopractice.preferences.eye_count.info": "Specificeer de hoeveelheid ogen die al in het eind portaal zitten.",
+    "peepopractice.preferences.eye_breaks.info": "Of je wil dat de Eye of Enders breken.",
+    "peepopractice.preferences.disable_mineshafts": "Zet Mineshafts uit",
+    "peepopractice.preferences.disable_mineshafts.info": "Als deze optie is aangezet, zullen Mineshafts niet genereren.",
+    "peepopractice.preferences.disable_dungeons": "Zet Dungeons uit",
+    "peepopractice.preferences.disable_dungeons.info": "Als deze optie is aangezet, zullen Dungeons (Mob spawners) niet genereren.",
+    "peepopractice.preferences.eye_count": "Eye-hoeveelheid",
+    "peepopractice.preferences.eye_count.info": "Specificeer de hoeveelheid ogen die al in de End portal zitten.",
     "peepopractice.preferences.no_early_flyaway": "Geen vroege wegvlieg",
     "peepopractice.preferences.no_early_flyaway.info": "Als deze optie is aangezet, zal de draak niet vroeg wegvliegen.",
-    "peepopractice.preferences.no_cage_spawn": "Geen Hok Spawn",
+    "peepopractice.preferences.no_cage_spawn": "Geen Cage Spawn",
     "peepopractice.preferences.no_cage_spawn.info": "Als deze optie is aangezet, zal je niet onder de grond spawnen.",
-    "peepopractice.preferences.start_node": "Start Node",
-    "peepopractice.preferences.start_node.info": "Kies welke kant de draak aan begint.",
+    "peepopractice.preferences.start_node": "Begin Node",
+    "peepopractice.preferences.start_node.info": "Kies bij welke node de draak begint.",
     "peepopractice.preferences.one_in_eight": "1/8",
-    "peepopractice.preferences.one_in_eight.info": "Als deze optie is aangezet, zal de draak altijd bij de middelste toren zijn.",
+    "peepopractice.preferences.one_in_eight.info": "Als deze optie is aangezet, zal de draak altijd bij de middelste toren beginnen.",
     "peepopractice.preferences.bastion_type": "Bastion Type",
     "peepopractice.preferences.bastion_type.info": "De bastion type.",
     "peepopractice.preferences.ranked_loot_table": "Ranked Loot Table",
-    "peepopractice.preferences.ranked_loot_table.info": "Als deze optie is aangezet, de gane zal de drop kansen gebruiken van MCSR Ranked.",
+    "peepopractice.preferences.ranked_loot_table.info": "Als deze optie is aangezet, zal de game de loottable gebruiken van MCSR Ranked.",
     "peepopractice.preferences.zombie_pigmen": "Zombie Pigmen",
-    "peepopractice.preferences.zombie_pigmen.info": "Of je Zombie Pigmen in je bastion wil ja of nee.",
-    "peepopractice.preferences.good_blaze_rates": "Goede Blaze kansen",
-    "peepopractice.preferences.good_blaze_rates.info": "Als deze optie is aangezet, blazes zullen altijd een Blaze Rod droppen.",
+    "peepopractice.preferences.zombie_pigmen.info": "Of er Zombie Pigmen in de Bastion kunnen spawnen.",
+    "peepopractice.preferences.good_blaze_rates": "Goede Blaze Rod kansen",
+    "peepopractice.preferences.good_blaze_rates.info": "Als deze optie is aangezet, zullen blazes altijd een Blaze Rod droppen.",
     "peepopractice.preferences.ssv": "Soul Sand Valley",
-    "peepopractice.preferences.ssv.info": "Als deze optie is aangezet, zal de Fortress altijd in een Soulsand Valley spawnen.",
+    "peepopractice.preferences.ssv.info": "Als deze optie is aangezet, zal de Fortress altijd in een Soul Sand Valley genereren.",
     "peepopractice.preferences.fire_resistance": "Vuur Bestendigheid",
-    "peepopractice.preferences.fire_resistance.info": "Of je het effect Vuur Bestendigheid wil ja of nee.",
+    "peepopractice.preferences.fire_resistance.info": "Of je het effect Vuur Bestendigheid wilt.",
     "peepopractice.preferences.spawn_location": "Spawn Locatie",
-    "peepopractice.preferences.spawn_location.info": "Of je binnen of buiten de Fortress wilt spawnen.",
+    "peepopractice.preferences.spawn_location.info": "Of je binnen of buiten de structure wilt spawnen.",
     "peepopractice.types.bastion.housing": "Housing",
     "peepopractice.types.bastion.stables": "Stables",
     "peepopractice.types.bastion.treasure": "Treasure",
     "peepopractice.types.bastion.bridge": "Bridge",
     "peepopractice.types.compare.pb": "PB",
-    "peepopractice.types.compare.average": "Gemiddeld",
+    "peepopractice.types.compare.average": "Gemiddelde",
     "peepopractice.types.pace_timer_show.always": "Altijd",
-    "peepopractice.types.pace_timer_show.end": "Eind",
+    "peepopractice.types.pace_timer_show.end": "Einde",
     "peepopractice.types.pace_timer_show.never": "Nooit",
     "peepopractice.types.eye_count.all": "Alle",
     "peepopractice.types.eye_count.none": "Geen",
@@ -109,16 +109,16 @@
     "peepopractice.standard_setting.hitboxes": "Hitboxes",
     "peepopractice.standard_setting.perspective": "Perspectief",
     "peepopractice.categories.mapless_split": "Mapless Split",
-    "peepopractice.categories.island_leave_split": "Island Leave Split",
+    "peepopractice.categories.island_leave_split": "Verlaat Eiland Split",
     "peepopractice.categories.ravine_enter_split": "Ravine Enter Split",
     "peepopractice.categories.bastion_split": "Bastion Split",
     "peepopractice.categories.fortress_split": "Fortress Split",
     "peepopractice.categories.nether_split": "Nether Split",
-    "peepopractice.categories.post_blind_split": "Post Blind Split",
+    "peepopractice.categories.post_blind_split": "Na-Blind Split",
     "peepopractice.categories.stronghold_split": "Stronghold Split",
-    "peepopractice.categories.end_split": "End Split",
+    "peepopractice.categories.end_split": "Eind Split",
     "peepopractice.categories.uneasy_alliance_split": "Uneasy Alliance Split",
     "peepopractice.categories.igloo_split": "Igloo Split",
     "peepopractice.categories.raid_split": "Raid Split",
-    "peepopractice.categories.end_game_split": "End Game Split"
+    "peepopractice.categories.end_game_split": "Eindspel Split"
 }
