--- a/src/main/resources/assets/peepopractice/lang/en_us.json
+++ b/src/main/resources/assets/peepopractice/lang/en_us.json
@@ -46,6 +46,7 @@
   "peepopractice.button.short_save_quit": "Save & Quit",
   "peepopractice.selection_type.any": "Any%",
   "peepopractice.selection_type.aa": "AA",
+  "peepopractice.selection_type.custom": "Custom",
   "peepopractice.global_options.same_inventory.info": "If enabled, whenever you press 'Next Split' you will continue with the inventory from the previous split.",
   "peepopractice.global_options.change_window_title.info": "If enabled, the text '(Practice)' will be appended to the game's window title.",
   "peepopractice.global_options.give_saturation.info": "If enabled, you'll get 10 saturation when you spawn in.",
