I cooked some inventory profiles

--- a/src/main/resources/assets/peepopractice/lang/en_us.json
+++ b/src/main/resources/assets/peepopractice/lang/en_us.json
@@ -10,6 +10,7 @@
   "peepopractice.title.category_preferences": "Configure (%s)",
   "peepopractice.title.category_selection": "Select Practice Category",
   "peepopractice.title.copy_inventory_selection": "Copy Inventory",
+  "peepopractice.title.inventory_selection": "Select Inventory",
   "peepopractice.title.edit_inventory": "Edit Inventory (%s)",
   "peepopractice.title.global_config": "Global Config",
   "peepopractice.title.settings_type_selection": "Select Config Type (%s)",
