--- a/src/main/resources/assets/peepopractice/lang/en_us.json
+++ b/src/main/resources/assets/peepopractice/lang/en_us.json
@@ -10,7 +10,7 @@
   "peepopractice.title.category_preferences": "Configure (%s)",
   "peepopractice.title.category_selection": "Select Practice Category",
   "peepopractice.title.copy_inventory_selection": "Copy Inventory",
-  "peepopractice.title.inventory_selection": "Select Inventory",
+  "peepopractice.title.inventory_options": "Inventory Options (%s)",
   "peepopractice.title.edit_inventory": "Edit Inventory (%s)",
   "peepopractice.title.global_config": "Global Config",
   "peepopractice.title.settings_type_selection": "Select Config Type (%s)",
@@ -35,7 +35,7 @@
   "peepopractice.button.play": "Play!",
   "peepopractice.button.copy": "Copy",
   "peepopractice.button.merge": "Merge",
-  "peepopractice.button.copy_from_existing": "Copy\nFrom\nExisting",
+  "peepopractice.button.reset_to_default": "Reset\nTo\nDefault",
   "peepopractice.button.settings_type.inventory": "Inventory",
   "peepopractice.button.settings_type.preferences": "Preferences",
   "peepopractice.button.settings_type.standard_settings": "Standard Settings",
@@ -51,6 +51,7 @@
   "peepopractice.global_options.same_inventory.info": "If enabled, whenever you press 'Next Split' you will continue with the inventory from the previous split.",
   "peepopractice.global_options.change_window_title.info": "If enabled, the text '(Practice)' will be appended to the game's window title.",
   "peepopractice.global_options.give_saturation.info": "If enabled, you'll get 10 saturation when you spawn in.",
+  "peepopractice.preferences.scramble_inventory": "Scramble",
   "peepopractice.preferences.compare_type": "Split Comparison",
   "peepopractice.preferences.compare_type.info": "Which type of time the split is compared against.",
   "peepopractice.preferences.pace_timer_show_type": "Show Pace Timer",
