--- a/src/main/resources/assets/peepopractice/lang/en_us.json
+++ b/src/main/resources/assets/peepopractice/lang/en_us.json
@@ -52,8 +52,6 @@
   "peepopractice.global_options.change_window_title.info": "If enabled, the text '(Practice)' will be appended to the game's window title.",
   "peepopractice.global_options.give_saturation.info": "If enabled, you'll get 10 saturation when you spawn in.",
   "peepopractice.preferences.scramble_inventory": "Scramble",
-  "peepopractice.preferences.tower": "Tower Height",
-  "peepopractice.preferences.tower.info": "The height of the tower for the selected node.",
   "peepopractice.preferences.compare_type": "Split Comparison",
   "peepopractice.preferences.compare_type.info": "Which type of time the split is compared against.",
   "peepopractice.preferences.pace_timer_show_type": "Show Pace Timer",
@@ -92,6 +90,8 @@
   "peepopractice.preferences.fire_resistance.info": "Whether or not you start with Fire Resistance status effect.",
   "peepopractice.preferences.spawn_location": "Spawn Location",
   "peepopractice.preferences.spawn_location.info": "Whether you spawn in- or outside the structure.",
+  "peepopractice.preferences.tower_height": "Tower Height",
+  "peepopractice.preferences.tower_height.info": "The height of the tower for the selected node.",
   "peepopractice.types.bastion.housing": "Housing",
   "peepopractice.types.bastion.stables": "Stables",
   "peepopractice.types.bastion.treasure": "Treasure",
@@ -110,6 +110,16 @@
   "peepopractice.types.start_node.back": "Back",
   "peepopractice.types.spawn_location.structure": "Structure",
   "peepopractice.types.spawn_location.terrain": "Terrain",
+  "peepopractice.types.end_tower_heights.small_boy_76": "Small Boy (76)",
+  "peepopractice.types.end_tower_heights.small_cage_79": "Small Cage (79)",
+  "peepopractice.types.end_tower_heights.tall_cage_82": "Tall Cage (82)",
+  "peepopractice.types.end_tower_heights.m85": "M85",
+  "peepopractice.types.end_tower_heights.m88": "M88",
+  "peepopractice.types.end_tower_heights.m91": "M91",
+  "peepopractice.types.end_tower_heights.t94": "T94",
+  "peepopractice.types.end_tower_heights.t97": "T97",
+  "peepopractice.types.end_tower_heights.t100": "T100",
+  "peepopractice.types.end_tower_heights.tall_boy_103": "Tall Boy (103)",
   "peepopractice.standard_setting.chunk_borders": "Chunk Borders",
   "peepopractice.standard_setting.hitboxes": "Hitboxes",
   "peepopractice.standard_setting.perspective": "Perspective",
