--- a/src/main/resources/assets/peepopractice/lang/en_us.json
+++ b/src/main/resources/assets/peepopractice/lang/en_us.json
@@ -92,6 +92,8 @@
   "peepopractice.preferences.spawn_location.info": "Whether you spawn in- or outside the structure.",
   "peepopractice.preferences.tower_height": "Tower Height",
   "peepopractice.preferences.tower_height.info": "The height of the tower for the selected node.",
+  "peepopractice.preferences.post_blind_spawn_dimension": "Spawn Dimension",
+  "peepopractice.preferences.post_blind_spawn_dimension.info": "The dimension you spawn in.",
   "peepopractice.types.bastion.housing": "Housing",
   "peepopractice.types.bastion.stables": "Stables",
   "peepopractice.types.bastion.treasure": "Treasure",
@@ -120,6 +122,8 @@
   "peepopractice.types.end_tower_heights.t97": "T97",
   "peepopractice.types.end_tower_heights.t100": "T100",
   "peepopractice.types.end_tower_heights.tall_boy_103": "Tall Boy (103)",
+  "peepopractice.types.post_blind_spawn_dimension.overworld": "Overworld",
+  "peepopractice.types.post_blind_spawn_dimension.nether": "Nether",
   "peepopractice.standard_setting.chunk_borders": "Chunk Borders",
   "peepopractice.standard_setting.hitboxes": "Hitboxes",
   "peepopractice.standard_setting.perspective": "Perspective",
