--- a/src/main/resources/assets/peepopractice/lang/en_us.json
+++ b/src/main/resources/assets/peepopractice/lang/en_us.json
@@ -113,16 +113,16 @@
   "peepopractice.types.start_node.back": "Back",
   "peepopractice.types.spawn_location.structure": "Structure",
   "peepopractice.types.spawn_location.terrain": "Terrain",
-  "peepopractice.types.end_tower_heights.small_boy_76": "Small Boy (76)",
-  "peepopractice.types.end_tower_heights.small_cage_79": "Small Cage (79)",
-  "peepopractice.types.end_tower_heights.tall_cage_82": "Tall Cage (82)",
-  "peepopractice.types.end_tower_heights.m85": "M85",
-  "peepopractice.types.end_tower_heights.m88": "M88",
-  "peepopractice.types.end_tower_heights.m91": "M91",
-  "peepopractice.types.end_tower_heights.t94": "T94",
-  "peepopractice.types.end_tower_heights.t97": "T97",
-  "peepopractice.types.end_tower_heights.t100": "T100",
-  "peepopractice.types.end_tower_heights.tall_boy_103": "Tall Boy (103)",
+  "peepopractice.types.end_tower_height.small_boy_76": "Small Boy (76)",
+  "peepopractice.types.end_tower_height.small_cage_79": "Small Cage (79)",
+  "peepopractice.types.end_tower_height.tall_cage_82": "Tall Cage (82)",
+  "peepopractice.types.end_tower_height.m85": "M85",
+  "peepopractice.types.end_tower_height.m88": "M88",
+  "peepopractice.types.end_tower_height.m91": "M91",
+  "peepopractice.types.end_tower_height.t94": "T94",
+  "peepopractice.types.end_tower_height.t97": "T97",
+  "peepopractice.types.end_tower_height.t100": "T100",
+  "peepopractice.types.end_tower_height.tall_boy_103": "Tall Boy (103)",
   "peepopractice.types.post_blind_spawn_dimension.overworld": "Overworld",
   "peepopractice.types.post_blind_spawn_dimension.nether": "Nether",
   "peepopractice.standard_setting.chunk_borders": "Chunk Borders",
